Fix formatting in _utilities.scss and add missing styles for text alignment and section titles

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,4 +1,4 @@
-@use 'variables';
+@use "variables";
 
 .container {
     max-width: variables.$max-width; 
@@ -73,7 +73,7 @@ input[class^='btn-']:hover {
     &-1 {
         margin: 1rem 0;
     }
-    &-2 {
+    &-2 { 
         margin: 2rem 0;
     }
     &-3 {
@@ -82,4 +82,27 @@ input[class^='btn-']:hover {
     &-4 {
         margin: 4rem 0;
     }
+}
+
+.text-center {
+    text-align: center;
+}
+
+.section-title {
+    font-size: 2rem;
+    padding-bottom: 1rem;
+    text-transform: uppercase;
+}
+
+.border-bottom {
+    height: 3px;
+    width: 3rem;
+    background-color: variables.$primary-color;
+    margin: 0 auto 1rem auto;
+}
+
+.lead {
+    font-size: 1.4rem;
+    margin-bottom: 2rem;
+    word-spacing: 2px;
 }
